--- a/interface/client/assets/scss/app.scss
+++ b/interface/client/assets/scss/app.scss
@@ -39,11 +39,9 @@ html, body {
 
 #panel1 {
   position: absolute;
-  width: 350px;
-  // height: 103.5%;
-  height: 828px;
+  width: 365px;
+  height: 827px;
   display: inline-block;
-  top: 40px;
   left: 0;
   margin: 0px;
   border: #91c4c3 2px solid;
@@ -52,58 +50,94 @@ html, body {
 
 #genprocess {
   position: relative;
-  z-index: 999;
+  z-index: 1;
 
   #geninput {
     text-align: center;
+    height: 50px;
+    margin-top: 10px;
 
     input {
-      height: 30px;
+      height: 40px;
       border-radius: 10px 0 0 10px;
-      width: 80%;
-      margin-top: 20px;
-      border: 2px solid gray;
+      width: 75%;
+      border: 2px solid rgb(171, 171, 171);
+      display: inline-block;
+      box-sizing: border-box;
+      font-size: 16px;
+      vertical-align:middle;
     }
 
     button {
-      height: 35px;
-      border: 2px solid gray;
+      width: 20%;
+      height: 40px;
+      border: 2px solid rgb(171, 171, 171);
+      border-left: none ;
       border-radius: 0 10px 10px 0;
+      background-color: #fefefe;
+      font-size: 16px;
+      vertical-align: middle;
+    }
+
+    button:hover {
+      background-color: #91c4c36e;
+    }
+
+    button:active {
+      background-color: #91c4c397;
     }
   }
 
   #genbuttons {
-    margin-top: 10px;
-    margin-left: 30px;
+    height: 50px;
+    padding-left: 30px;
+
+    button {
+      margin-right: 10px;
+      height: 30px;
+      border: 1px solid gray;
+      border-radius: 10px;
+      box-shadow: #888 2px 2px 5px;
+      background-color: #91c4c36e;
+    
+      img {
+        height: 14px;
+      }
+    } 
+
+    button:hover {
+      background-color: #91c4c397;
+    }
+
+    button:active {
+      background-color: #91c4c3c1;
+    }
   }
 }
 
 #panel2 {
   position: absolute;
-  // height: 100%;
   height: 828px;
-  left: 365px;
-  right: 535px;
+  left: 380px;
+  right: 520px;
   display: inline-block;
-  top: 40px;
   margin: 0px;
 }
 
 #panel3 {
   position: absolute;
-  width: 525px;
+  width: 510px;
   height: 517px;
   right: 0;
   display: inline-block;
-  top: 40px;
   margin: 0px;
 }
 
 #panel4 {
   position: absolute;
-  width: 525px;
+  width: 510px;
   right: 0;
-  top: 565px;
+  top: 525px;
   height: 298px;
   display: inline-block;
   margin: 0px;
@@ -114,16 +148,17 @@ html, body {
   width: 100%;
   background-color: #91c4c3;
   color: white;
-  font-size: 15px;
+  // font-size: 15px;
   text-align: center;
   height: 25px;
+  line-height: 25px;
   display: inline-block;
   border-color: white;
 }
 
 #datsetspan {
   position: relative;
-  top: 417px;
+  top: 394px;
   display: block;
   width: 100%;
   background-color: #91c4c3;
@@ -172,6 +207,25 @@ html, body {
   margin-top: 10px;
 }
 
+#chartediterdesc {
+  .title {
+    width: 100%;
+    background-color: #91c4c397;
+    font-size: 18px;
+    font-weight: bold;
+    
+    padding: 10px 0;
+  }
+
+  .content {
+    overflow-y: auto;
+    margin: 5px;
+    padding: 5px;
+    height: 180px;
+    border: 1px solid rgb(196, 196, 196);
+  }
+}
+
 #chartcode {
   box-sizing: border-box;
   width: 95%;
@@ -215,14 +269,38 @@ html, body {
 }
 
 .editorbuttons {
-  height: 20px;
+  height: 30px;
   display: inline-block;
+  width: 100%;
+  position: relative;
+  bottom: 10px;
+
+  input {
+    height: 30px;
+    border-radius: 5px 0 0 5px;
+    width: 70%;
+    border: 2px solid rgb(171, 171, 171);
+    display: inline-block;
+    box-sizing: border-box;
+    vertical-align:middle;
+  }
 
   button {
-    margin: 2px;
-    height: 20px;
-    width: 80px;
-    border-radius: 2px;
+    width: 25%;
+    height: 30px;
+    border: 2px solid rgb(171, 171, 171);
+    border-left: none ;
+    border-radius: 0 5px 5px 0;
+    background-color: #fefefe;
+    vertical-align: middle;
+  }
+
+  button:hover {
+    background-color: #91c4c36e;
+  }
+
+  button:active {
+    background-color: #91c4c397;
   }
 
   button:disabled {
@@ -254,7 +332,7 @@ html, body {
   left: 0;
   width: 100%;
   height: 276px;
-  top: 555px;
+  top: 554px;
   font-size: 11px;
   display: inline-block;
   border: #91c4c3 2px solid;
