--- a/interface/client/assets/scss/app.scss
+++ b/interface/client/assets/scss/app.scss
@@ -23,6 +23,8 @@ html, body {
 }
 
 #toolbar {
+  position: relative;
+  top: 850px;
   width: 100%;
   height: 40px;
   display: inline-block;
@@ -103,6 +105,18 @@ html, body {
       img {
         height: 14px;
       }
+
+      #importdata {
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 1;
+        bottom: 0;
+        width: 100px;
+        overflow: hidden;
+      }
     } 
 
     button:hover {
@@ -127,7 +141,7 @@ html, body {
 #panel3 {
   position: absolute;
   width: 510px;
-  height: 517px;
+  height: 510px;
   right: 0;
   display: inline-block;
   margin: 0px;
@@ -344,7 +358,7 @@ html, body {
   border: #91c4c3 2px solid;
   position: absolute;
   width: 100%;
-  height: 495px;
+  height: 280px;
   top: 20px;
   bottom: 0;
   left: 0;
@@ -357,7 +371,7 @@ html, body {
 #suggestionview {
   box-sizing: border-box;
   border: #91c4c3 2px solid;
-  height: 280px;
+  height: 100%;
   width: 100%;
   display: flex;
   justify-content : center;
@@ -459,3 +473,11 @@ html, body {
   text-decoration: none;
   cursor: pointer;
 }
+
+// #allchartsview button:hover {
+//   background-color: #91c4c397;
+// }
+
+// #allchartsview button:active {
+//   background-color: #91c4c3c1;
+// }
