--- a/interface/client/assets/scss/app.scss
+++ b/interface/client/assets/scss/app.scss
@@ -191,7 +191,7 @@ html, body {
   input {
     height: 40px;
     border-radius: 5px 0 0 5px;
-    width: 75%;
+    width: 60%;
     border: 2px solid rgb(171, 171, 171);
     display: inline-block;
     box-sizing: border-box;
@@ -200,13 +200,30 @@ html, body {
   }
 
   button {
-    width: 20%;
+    width: 15%;
     height: 40px;
     border: 2px solid rgb(171, 171, 171);
     border-left: none ;
     border-radius: 0 5px 5px 0;
     background-color: #fefefe;
     vertical-align: middle;
+  }
+
+  #submit {
+    width: 20%;
+    height: 40px;
+    background-color: #91c4c36e;
+    box-shadow: #bdbdbd 1px 1px 10px;
+    border: 2px solid rgb(171, 171, 171);
+    border-radius: 5px;
+  }
+
+  #submit:hover {
+    background-color: #91c4c397;
+  }
+
+  #submit:active {
+    background-color: #91c4c3c1;
   }
 
   button:hover {
