--- a/interface/client/assets/scss/app.scss
+++ b/interface/client/assets/scss/app.scss
@@ -44,7 +44,7 @@ html, body {
   width: 365px;
   height: 827px;
   display: inline-block;
-  left: 0;
+  right: 0;
   margin: 0px;
   border: #91c4c3 2px solid;
   text-align: center;
@@ -133,7 +133,8 @@ html, body {
 #panel2 {
   position: absolute;
   height: 828px;
-  left: 380px;
+  width: 795px;
+  left: 525px;
   right: 520px;
   display: inline-block;
   margin: 0px;
@@ -163,7 +164,7 @@ html, body {
   position: absolute;
   width: 510px;
   height: 510px;
-  right: 0;
+  left: 0;
   display: inline-block;
   margin: 0px;
 }
