--- a/interface/client/assets/scss/app.scss
+++ b/interface/client/assets/scss/app.scss
@@ -305,10 +305,16 @@ html, body {
 }
 
 #chartediterdesc {
+  text-align: left;
+  // white-space: pre-line;
+  // word-break: break-all;
+  word-wrap:break-word;
+
+
   .title {
     width: 100%;
     background-color: #91c4c397;
-    font-size: 18px;
+    font-size: 17px;
     font-weight: bold;
     
     padding: 10px 0;
@@ -318,7 +324,7 @@ html, body {
     overflow-y: auto;
     margin: 5px;
     padding: 5px;
-    height: 180px;
+    height: 100%;
     border: 1px solid rgb(196, 196, 196);
   }
 }
@@ -358,8 +364,9 @@ html, body {
 #editorcontainer {
   box-sizing: border-box;
   width: 100%;
-  top: 170px;
-  bottom: 20px;
+  height: 100%;
+  // top: 170px;
+  // bottom: 20px;
   left: 0;
   position: absolute;
   display: inline-block;
@@ -429,7 +436,7 @@ html, body {
   position: absolute;
   left: 0;
   width: 100%;
-  height: 276px;
+  height: 277px;
   top: 554px;
   font-size: 11px;
   display: inline-block;
