--- a/interface/client/assets/scss/app.scss
+++ b/interface/client/assets/scss/app.scss
@@ -91,9 +91,33 @@ html, body {
     }
   }
 
+  #coordinate {
+    // height: 50px;
+    float: left;
+    border-radius: 5px;
+    padding: 5px;
+    margin-left: 20px;
+    margin-right: 20px;
+    // border: 1px solid gray;
+    box-shadow: #888888 1px 1px 10px;
+    background-color: #88888842;
+
+    .coordinatetitle {
+      padding-left: 10px;
+    }
+
+    .coordinatevalue {
+      display: inline-block;
+      width: 47px;
+      border-bottom: 1px solid black;
+      font-size: 14px;
+      // text-decoration: underline solid black;
+    }
+  }
+
   #genbuttons {
-    height: 50px;
-    padding-left: 30px;
+    // height: 50px;
+    // padding-left: 30px;
 
     button {
       margin-right: 10px;
