--- a/interface/client/assets/scss/app.scss
+++ b/interface/client/assets/scss/app.scss
@@ -22,6 +22,115 @@ html, body {
   }
 }
 
+/*模态框主体样式*/
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+/*模态框公共样式*/
+.modal-content {
+  background-color: #fefefe;
+  margin: 150px auto 0;
+  // padding: 20px;
+  height: 500px;
+  border: 1px solid #888;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  animation: modal-show 0.3s;
+
+  .modalheader {
+    border-bottom: 1px solid gray;
+    padding: 0 20px;
+
+    h3 {
+      text-align: center;
+    }
+
+    /*关闭按钮*/
+    .close {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+      cursor: pointer;
+      -webkit-tap-highlight-color: rgba(255,0,0,0);
+    }
+
+    /*关闭按钮的鼠标点击和经过样式*/
+    .close:hover,
+    .close:focus {
+      color: black;
+      text-decoration: none;
+      cursor: pointer;
+      -webkit-tap-highlight-color: rgba(255,0,0,0);
+    }
+  }
+
+  .modalbody {
+    padding: 10px;
+    height: 400px;
+    overflow-y: auto;
+
+    #exportallcharts {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+  }
+}
+
+/* 正常大小 */
+.modal-normal {
+  width: 1200px;
+}
+
+/* 中等大小 */
+.modal-medium {
+  width: 400px;
+}
+
+/* 迷你大小 */
+.modal-mini {
+  width: 250px;
+}
+
+/* 隐藏 */
+.modal-hide {
+  animation: modal-hide 0.3s;
+}
+
+/* 展示动画 */
+@keyframes modal-show {
+  from {
+      opacity: 0;
+      transform: translateY(-50px);
+  }
+  to {
+      opacity: 1;
+      transform: translateY(0);
+  }
+}
+
+/* 隐藏动画 */
+@keyframes modal-hide {
+  from {
+      opacity: 1;
+      transform: translateY(0);
+  }
+  to {
+      opacity: 0;
+      transform: translateY(-50px);
+  }
+}
+
 #toolbar {
   position: relative;
   top: 850px;
@@ -832,56 +941,56 @@ html, body {
   margin: 1.5px;
 }
 
-.modal {
-  display: none; 
-  position: fixed;
-  z-index: 1; 
-  left: 0;
-  top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto;
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.4); 
-}
+// .modal {
+//   display: none; 
+//   position: fixed;
+//   z-index: 1; 
+//   left: 0;
+//   top: 0;
+//   width: 100%; 
+//   height: 100%; 
+//   overflow: auto;
+//   background-color: rgb(0,0,0); 
+//   background-color: rgba(0,0,0,0.4); 
+// }
 
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; 
-  padding: 20px;
-  border: 1px solid #888;
-  width: 600px; 
+// .modal-content {
+//   background-color: #fefefe;
+//   margin: 15% auto; 
+//   padding: 20px;
+//   border: 1px solid #888;
+//   width: 600px; 
 
-  label {
-    margin: 2px;
-    width: 150px; 
-    display: inline-block;
-  }
+//   label {
+//     margin: 2px;
+//     width: 150px; 
+//     display: inline-block;
+//   }
 
-  input {
-    width: 200px;
-    margin: 2px;
-    display: inline-block;
-  }
+//   input {
+//     width: 200px;
+//     margin: 2px;
+//     display: inline-block;
+//   }
 
-  button {
-    margin: 10px 2px;
-  }
-}
+//   button {
+//     margin: 10px 2px;
+//   }
+// }
 
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
+// .close {
+//   color: #aaa;
+//   float: right;
+//   font-size: 28px;
+//   font-weight: bold;
+// }
 
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
+// .close:hover,
+// .close:focus {
+//   color: black;
+//   text-decoration: none;
+//   cursor: pointer;
+// }
 
 // #allchartsview button:hover {
 //   background-color: #91c4c397;
